--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Catamaran|Lato|Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <div id=main></div>
-    <script async defer src=/bundle.js></script>    
+    <script async defer src=/bundle.js></script>
   </body>
-</html> 
+</html>
